# Tralo_Daa

./: .gitignore  README.md  run.sh
Backend/: CMakeLists.txt  server.py
Backend/Fairness Analyzer/include/: FairnessAnalyzer.h
Backend/Fairness Analyzer/src/: FairnessAnalyzer.cpp
Backend/Load Generator/: CMakeLists.txt
Backend/Load Generator/include/: LoadGenerator.h  OrderQueue.h  Trader.h  TraderProfiles.h
Backend/Load Generator/src/: LoadGenerator.cpp
Backend/Order Matching Engine/include/: MemoryPool.h  OrderBook.h  Types.h
Backend/Order Matching Engine/src/: OrderBook.cpp
Backend/src/: exchange_main.cpp
Frontend/: app.js  guide.html  index.html  style.css
